[Bug #18958] format string must be ASCII compatible